# earthtale

./: .gitignore  README.md  main.py  ore_config.json  pyproject.toml
src/earthtale/: __init__.py  cli.py  config.py
src/earthtale/converter/: __init__.py  pipeline.py
src/earthtale/hytale/: __init__.py  blocks.py  chunk.py  constants.py  palette.py  region.py  section.py  template_data.py  world.py
src/earthtale/nasa/: __init__.py  coordinates.py  downloader.py  srtm.py
src/earthtale/terrain/: __init__.py  biome.py  blocks.py  elevation.py  ores.py
