[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthtale"
version = "0.1.0"
description = "Convert NASA elevation and satellite data into playable Hytale world files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "rasterio>=1.3.0",
    "pillow>=10.0.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
earthtale = "earthtale.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/earthtale"]
